# Jormungandr-Semantica

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
aglt/: __init__.py  cr_umap.py  wavelets.py
aglt/pipeline/: steps.py
cpp_backend/: CMakeLists.txt  bindings.cpp  main.cpp  main.h
docs/: _config.yml  dashboard.md  index.md
docs/.bundle/: config
docs/_layouts/: default.html
docs/_site/: index.html
experiments/: run_benchmark.py  run_theorem_4_3_validation.py
jormungandr_semantica/: __init__.py  cr_umap.py  wavelets.py
jormungandr_semantica/pipeline/: steps.py
notebooks/: diagnose_geometry.ipynb  learnable_anisotropy.ipynb  paper1_heuristic_analysis.ipynb  phase1_statistical_analysis.ipynb  phase2_ablation_analysis.ipynb  theorem_4_3_plot.ipynb
outputs/amber-galaxy-64-llpddgjp/: manifest.json
outputs/avid-water-20-51ubfvyo/: manifest.json
outputs/breezy-deluge-32-r38ej31m/: manifest.json
outputs/bumbling-forest-76-zos0ttzn/: manifest.json
outputs/cerulean-frog-60-k59inzdp/: manifest.json
outputs/classic-paper-30-c6j8z37u/: manifest.json
outputs/classic-sponge-68-mceizvfx/: manifest.json
outputs/colorful-elevator-63-wfr4lf8p/: manifest.json
outputs/dark-sky-59-53hacq4o/: manifest.json
outputs/decent-water-36-i7s6l3qw/: manifest.json
outputs/deft-tree-28-7wftoti3/: manifest.json
outputs/devoted-resonance-26-nwnk1uld/: manifest.json
outputs/devoted-shadow-34-qk6rtjfz/: manifest.json
outputs/different-sound-46-bvvfoppg/: manifest.json
outputs/different-voice-44-8cxcyo8y/: manifest.json
outputs/distinctive-elevator-10-gv7yyc2k/: manifest.json
outputs/distinctive-star-7-47q43if4/: manifest.json
outputs/divine-darkness-11-5k35zljk/: manifest.json
outputs/drawn-sun-3-k462hm5q/: manifest.json
outputs/dulcet-paper-43-r45vfvwj/: manifest.json
outputs/dutiful-violet-14-ipuu8zq9/: manifest.json
outputs/efficient-fog-5-kfx8k6oh/: manifest.json
outputs/electric-sea-6-992yli9u/: manifest.json
outputs/exalted-dew-48-gh4tnpwm/: manifest.json
outputs/fiery-microwave-54-l9qkykqy/: manifest.json
outputs/fine-donkey-67-fgbcycp3/: manifest.json
outputs/firm-moon-33-u1kpwfrk/: manifest.json
outputs/fragrant-yogurt-35-72majsjd/: manifest.json
outputs/genial-dew-50-vpkjnoch/: manifest.json
outputs/glowing-snowball-49-ys0nfmn5/: manifest.json
outputs/good-puddle-37-77qy2tyr/: manifest.json
outputs/good-salad-4-n4ilpbjc/: manifest.json
outputs/good-terrain-8-3uytz79m/: manifest.json
outputs/grateful-disco-56-hfdcym6n/: manifest.json
outputs/hardy-donkey-38-zq1qll7o/: manifest.json
outputs/hearty-pyramid-66-o2y68rvp/: manifest.json
outputs/helpful-music-23-n1sapcx2/: manifest.json
outputs/jumping-field-53-if7ja75b/: manifest.json
outputs/leafy-firebrand-25-rqsbyktb/: manifest.json
outputs/legendary-haze-22-wfy4mt8t/: manifest.json
outputs/likely-blaze-61-zyraigjr/: manifest.json
outputs/misty-fire-31-e464ronm/: manifest.json
outputs/morning-monkey-41-i1t9evjp/: manifest.json
outputs/morning-resonance-16-zna5yt4a/: manifest.json
outputs/neat-lake-42-pbzb9ogj/: manifest.json
outputs/pious-star-21-k5gtldq4/: manifest.json
outputs/playful-disco-65-t3je3md1/: manifest.json
outputs/pretty-fire-58-4x91btj8/: manifest.json
outputs/proud-sponge-47-3nqrfdxy/: manifest.json
outputs/quiet-universe-45-6hyxf6yy/: manifest.json
outputs/radiant-sunset-19-v98ox2l8/: manifest.json
outputs/rare-dust-15-syw0zsho/: manifest.json
outputs/rich-snowflake-70-kaqp087q/: manifest.json
outputs/robust-morning-39-hd0bmeiv/: manifest.json
outputs/royal-sun-52-6kwpdu7e/: manifest.json
outputs/sage-firebrand-24-cho57pxc/: manifest.json
outputs/sage-sunset-40-evfgljjy/: manifest.json
outputs/sunny-durian-17-h50b6k7o/: manifest.json
outputs/sweet-mountain-18-05oi61mt/: manifest.json
outputs/swift-armadillo-69-38mynjv9/: manifest.json
outputs/twilight-fire-57-d69r5y2f/: manifest.json
outputs/upbeat-monkey-27-qtq1v5c9/: manifest.json
outputs/visionary-snowflake-75-78uwxnwp/: manifest.json
outputs/vital-oath-62-gg1oqf3m/: manifest.json
outputs/warm-disco-12-01po69ic/: manifest.json
outputs/whole-plasma-55-wn5hn1td/: manifest.json
paper/: Makefile  paper.aux  paper.bbl  paper.blg  paper.fdb_latexmk  paper.fls  paper.out  paper.tex  paper.toc  preamble.tex
principia_semantica/: __init__.py
scripts/: cache_curvature.py  generate_failure_viz.py  prepare_data.py  run_full_ablation.sh  run_full_benchmark.sh  verify_acmw.py  verify_chebyshev_operator.py  verify_cr_umap.py  verify_install.py  verify_wavelets.py
technical_reports/: report_02_falsification_of_heuristics.aux  report_02_falsification_of_heuristics.out  report_02_falsification_of_heuristics.tex
tests/: test_anisotropic.py  test_core_install.py  test_dagn_operator.py  test_wavelets.py
wandb/: latest-run
(+314 files in other folders)
