# This section defines the tools needed to build your package.
[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

# This section contains the standard metadata for your project.
[project]
name = "principia-semantica"
version = "0.0.1"
description = "A framework for geometric deep learning in semantic analysis."
authors = [{ name = "Your Name", email = "your.email@example.com" }]
license = { text = "MIT" }
requires-python = ">=3.8"

dependencies = [
    "numpy",
    "scikit-learn",
    "pygsp",
    "faiss-cpu"
]

# This section provides configuration for scikit-build-core
[tool.scikit-build]
# Tell the build tool where to find the main CMakeLists.txt file.
cmake.source-dir = "cpp_backend"

# This line explicitly tells the build system to find and include the
# 'principia_semantica' folder as a top-level package in the wheel.
wheel.packages = ["principia_semantica"]