[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
# --- RENAMED ---
name = "Jormungandr-Semantica"
version = "0.1.0" # Let's also bump the version to 0.1.0 to mark this significant change
description = "A framework for geometric deep learning in semantic analysis."
authors = [{ name = "Your Name", email = "your.email@example.com" }]
license = { text = "MIT" }
requires-python = ">=3.8"

dependencies = [
    "numpy",
    "scikit-learn",
    "pygsp",
    "faiss-cpu",
    "wandb",
    "torch",
    "GitPython",
    "bertopic",
    "hdbscan",
    "datasets",
    "sentence-transformers",
    "pingouin"
]

[tool.scikit-build]
cmake.source-dir = "cpp_backend"
# --- RENAMED ---
# Tell the build system our package is now in the 'jormungandr_semantica' folder
wheel.packages = ["jormungandr_semantica"]