# File: pyproject.toml

[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
# --- RENAMED ---
name = "aglt"
version = "0.2.0" # Bump version to mark this major refactoring
description = "AGLT: A Framework for Anisotropic Graph Learning."
authors = [{ name = "Mythogenesys Research Group" }] # Updated Author
license = { text = "MIT" }
requires-python = ">=3.8"

dependencies = [
    "numpy",
    "scikit-learn",
    "pygsp",
    "faiss-cpu",
    "wandb",
    "torch",
    "GitPython",
    "bertopic",
    "hdbscan",
    "datasets",
    "sentence-transformers",
    "pingouin",
    "GraphRicciCurvature>=0.5.2",
    "tqdm",
    "pandas",
    "networkx",
    "scipy"
]

# --- NEW: Development Dependencies ---
[project.optional-dependencies]
dev = ["pytest", "black", "ruff", "pre-commit"]

[tool.scikit-build]
cmake.source-dir = "cpp_backend"
# --- RENAMED ---
# Tell the build system our package is now in the 'aglt' folder
wheel.packages = ["aglt"]
